@@ -8,6 +8,10 @@ is also provided AS IS and is probably completely unreadable.
 ------------------------------------------------------------------------------------
 August 5 2004 Heikki Sairanen <firstname.lastname@tut.fi>
 
+	* bomb displacing energy field in Attnam
+
+August 5 2004 Heikki Sairanen <firstname.lastname@tut.fi>
+
 	* Food added to UT
 	* wskill with no exp that are used are shown on wskill screen
 
